<resources>

    <string name="app_name">MediaService</string>

    <string name="music_device_usb1">USB1 device</string>
    <string name="music_device_usb2">USB2 device</string>
    <string name="image_not_support_text">Unsupported format!</string>
    
    <string name="search_media_input_empty">Please input characters</string>
    <string name="search_media_list_empty">No media records found.</string>
    <string name="search_media_waiting_msg">"Searching, Please waiting!"</string>
    <string name="media_flash_tab">Flash</string>
    <string name="media_usb1_tab">USB1</string>
    <string name="media_usb2_tab">USB2</string>
    <string name="media_collect_tab">Favorite</string>
    <string name="media_appwidget_title_show">Unkown - Unkown</string>
    <string name="music_usb1_label">USB1 Music</string>
    <string name="music_usb2_label">USB2 Music</string>
    <string name="media_copy_to_local">To-Local</string>
    <string name="collect_from_local">From:Local</string>
    <string name="collect_from_usb1">From:USB1</string>
    <string name="collect_from_usb2">From:USB2</string>
    
    <string name="radio_null">N/A</string>
    <string name="collect_limit_dialog_title">Collection tips</string>
    <string name="collect_limit_dialog_message">The number of collections has exceeded the maximum value of 1000, and the execution collection will overwrite nonexistent files, records, or older records. Is it implemented?</string>
    <string name="collect_limit_dialog_ok">Continue</string>
    <string name="collect_limit_dialog_cancel">Cancel</string>
    <string name="cover_dialog_title">Cover tips</string>
    <string name="cover_dialog_ok">OK</string>
    <string name="cover_dialog_cancel">Cancel</string>
    <string name="no_select_media_file_message">No file selected, Please select first!</string>
    <string name="video_fastnext_to_end_message">Close to the end of the video!</string>
    <string name="music_copy_empty">Please choose the songs</string>
    <string name="image_copy_empty">Please choose the images</string>
    <string name="video_copy_empty">Please choose the videos</string>
    <string name="image_delete_empty">Please choose the images</string>
    <string name="video_delete_empty">Please choose the videos</string>
    <string name="image_delect_ok">Delete the Selected images now?</string>
    <string name="video_delect_ok">Delete the Selected videos now?</string>
    <string name="failed_check_available_size">The built-in storage space is insufficient, and the copy is not supported. Please clean it first.</string>
    <string name="file_operate_cancel">File-operate cancel!</string>
    <string name="delete_image_progress_title">Deleting images</string>
    <string name="delete_video_progress_title">Deleting videos</string>
    <string name="delete_audio_progress_title">Deleting musics</string>
    <string name="copy_image_progress_title">Coping images</string>
    <string name="copy_video_progress_title">Coping videos</string>
    <string name="copy_audio_progress_title">Coping audios</string>
    <string name="radio_delect_ok">Delete the Selectd-Radio now?</string>
    <string name="radio_delete_empty">Please choose the radios</string>
    <string name="no_media_can_play">No media. Please insert USB!</string>
    <string name="media_scanning_try_a_late">Media scanning. Please try a late!</string>
    <string name="no_device_usb_one">Please inset USB1</string>
    <string name="no_device_usb_two">Please inset USB2</string>
    <string name="copy_file_error_of_same_name">Multiple files with the same name, default coverage.</string>
    
    <string name="music_error_title">Attention</string>
    <string name="music_dialog_btn_ok">OK</string>
    <string name="music_dialog_btn_cancle">Cancle</string>
    <string name="music_delect">Delete</string>
    <string name="music_cancle">Cancle</string>
    <string name="music_choose_all">Select all</string>
    <string name="music_choose_remove">Cancle</string>
    <string name="media_play_nosupport">Unsupported file</string>
    <string name="pub_radio">Radio</string>
    <string name="pub_bt">BT</string>
    <string name="pub_btmusic">BT Music</string>
    <string name="pub_media">Media</string>
    <string name="pub_music">Music</string>
    <string name="pub_video">Video</string>
    <string name="pub_image">Image</string>
    <string name="pub_net_music">Net Music</string>
    <string name="pub_net_radio">Net Radio</string>
    <string name="pub_my_music">My Music</string>
    <string name="music_loading_flash">Flash reading</string>
    <string name="music_loading_usb">USB reading</string>
    <string name="music_loading_usb1">USB1 reading</string>
    <string name="music_loading_usb2">USB2 reading</string>
    <string name="music_no_device_usb">Please inset USB</string>
    <string name="media_no_file">Temporarity no file</string>
    <string name="media_video_forbidden_text">Please do not watch video while driving</string>
    <string name="launcher_card_media">Media</string>
    <string name="launcher_card_am_st">ST</string>
    <string name="music_save">Music save</string>
    <string name="music_local">Local music</string>
    <string name="music_device_usb">USB device</string>
    <string name="music_edit">Edit</string>
    <string name="music_edit_load">Reading...</string>
    <string name="music_scan_bt">BT</string>
    <string name="music_scan_bt_free">Not connected</string>
    <string name="music_my_save">My save</string>
    <string name="media_unknow">Unknow</string>
    <string name="music_device_pullout_usb">Usb is pulled out! \n System had disconnected the Device.</string>
    <string name="bt_connect_success">Connect Success</string>
    <string name="music_shou"> %1$s songs</string>
    <string name="btmusic_device_disconnected"> Your BT had disconnected! \n Please turn to Setting connect the BT.</string>
    <string name="btmusic_device_bt_error">Your BT had disconnected!</string>
    <string name="music_delect_wait">Songs deleting</string>
    <string name="music_delect_error">Delected fail</string>
    <string name="music_delect_ok">Delete the Selected songs now?</string>
    <string name="music_delect_empty">Please choose the songs</string>
    
    <string name="bt_permission">There is no access to Bluetooth media permissions.\n Please make sure that the Bluetooth media permissions are opened at the end of the cell phone.</string>
    
    <string name="in_call_cannot_play">In the call, the media can\'t be played!</string>
    <string name="usb1_no_music">USB1 non media file</string>
    <string name="usb2_no_music">USB2 non media file</string>
    <string name="disks_pull_out">Play error, disks have been pulled out</string>
    <string name="Video_file_delete">Play error, video file has been deleted</string>
    
    <string name="copy_dialog_title">Copy tips</string>
    <string name="copy_dialog_check_prompt">Check the existence of a copy of the target file...</string>
    <string name="more_than_a_limit_on_the_number_of_words">The number of words you have entered has exceeded the limit!</string>
    <string name="copy_picture_file_exception">Copy picture file exception</string>
    <string name="delete_picture_file_exception">Delete image file exceptions</string>
    <string name="collection_of_picture_anomalies">Collection of picture anomalies</string>
    <string name="cancel_the_collection_of_pictures">Cancel the collection of pictures</string>
    <string name="copy_music_file_exception">Copy music file exception</string>
    <string name="no_song_is_playing">No song is playing!</string>
    <string name="delete_video_file_exception">Delete video file exception</string>
    <string name="copy_video_file_exception">Copy video file exception</string>
    <string name="collection_of_video_anomalies">Collection of video anomalies</string>
    <string name="cancel_the_collection_of_abnormal_video">Cancel the collection of abnormal video</string>
    <string name="a_maximum_collection_of_30_radio_stations">A maximum collection of 30 radio stations!</string>
    <string name="added_to_the_collection_list">Added to the collection list</string>
    <string name="cancel_the_collection">Cancel the collection</string>
    <string name="no_collection_of_radio_stations">No collection of radio stations!</string>
</resources>
