<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:hkui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/pub_show_height"
    tools:context=".Video_Activity_Main" >
    
    <RadioGroup
        android:id="@+id/video_tab_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80px"
        android:gravity="center"
        android:orientation="horizontal" > 
        
        <com.amd.widget.BeepRadioButton
            android:id="@+id/video_device_flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/tab_backgroud_selector"
            android:button="@null"
            android:gravity="center_horizontal"
            android:textColor="@drawable/tab_textcolor_selector"
            android:textSize="22sp"
            android:text="@string/media_flash_tab" />
        
        <com.amd.widget.BeepRadioButton
            android:id="@+id/video_device_usb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/tab_backgroud_selector"
            android:button="@null"
            android:gravity="center_horizontal"
            android:textColor="@drawable/tab_textcolor_selector"
            android:textSize="22sp"
            android:text="@string/media_usb1_tab" />
        
        <com.amd.widget.BeepRadioButton
            android:id="@+id/video_device_usb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/tab_backgroud_selector"
            android:button="@null"
            android:gravity="center_horizontal"
            android:textColor="@drawable/tab_textcolor_selector"
            android:textSize="22sp"
            android:text="@string/media_usb2_tab" />
        
        <com.amd.widget.BeepRadioButton
            android:id="@+id/video_device_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/tab_backgroud_selector"
            android:button="@null"
            android:gravity="center_horizontal"
            android:textColor="@drawable/tab_textcolor_selector"
            android:textSize="22sp"
            android:text="@string/media_collect_tab" />
        
    </RadioGroup>
   	
    <ImageButton 
        android:id="@+id/video_search_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@android:color/transparent"
        android:padding="16px"
        android:layout_marginTop="80px"
        android:layout_marginRight="80px"
        android:layout_alignParentRight="true"
        android:visibility="visible"
        android:src="@drawable/media_search_selector"/>
    
    <!-- 全选、取消、删除  -->
    <RelativeLayout
        android:id="@+id/list_edit_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80px"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/edit_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="22sp"
            android:text="@string/music_delect"
            android:textColor="@drawable/text_color_selector" />

        <TextView
            android:id="@+id/edit_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/edit_delete"
            android:layout_marginRight="20dp"
            android:text="@string/music_cancle"
            android:textSize="22sp"
            android:textColor="@drawable/text_color_selector" />

        <TextView
            android:id="@+id/edit_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/edit_cancel"
            android:layout_marginRight="20dp"
            android:textSize="22sp"
            android:text="@string/music_choose_all"
            android:textColor="@drawable/text_color_selector" />
        
        <TextView
            android:id="@+id/copy_to_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/edit_all"
            android:layout_marginRight="20dp"
            android:textSize="22sp"
            android:text="@string/media_copy_to_local"
            android:textColor="@drawable/text_color_selector" />

    </RelativeLayout>

    <include
        layout="@layout/video_list_layout"
        android:id="@+id/video_list_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pub_fragment_height"
        android:layout_marginTop="@dimen/pub_statusbar_height" />
    
    <include
        layout="@layout/video_play_fragment"
        android:id="@+id/video_play_home"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>