<com.haoke.ui.media.Media_Activity_Tab 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/media_tab_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40px" > 
        <ImageView
		    android:id="@+id/media_tab_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="65px"
            android:visibility="visible"
            android:src="@drawable/ico_media_play_n"
            />
        <ImageView 
            android:id="@+id/media_tab_current_underlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:visibility="visible"
            android:src="@drawable/top_bar_underlined_p"
            />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/media_tab_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal" >
        
        <RadioButton
            android:id="@+id/media_tab_net_music"
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="14dp"
	        android:layout_marginRight="14dp"
	        android:background="@drawable/tab_backgroud_selector"
	        android:button="@null"
	        android:gravity="center_horizontal"
	        android:textColor="@drawable/tab_textcolor_selector"
	        android:textSize="24sp"
	        android:text="@string/pub_net_music"
	        android:visibility="gone"
            />
        <RadioButton
            android:id="@+id/media_tab_net_radio"
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="14dp"
	        android:layout_marginRight="14dp"
	        android:background="@drawable/tab_backgroud_selector"
	        android:button="@null"
	        android:gravity="center_horizontal"
	        android:textColor="@drawable/tab_textcolor_selector"
	        android:textSize="24sp"
	        android:text="@string/pub_net_radio"
	        android:visibility="gone"
            />
        <RadioButton
            android:id="@+id/media_tab_radio"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="14dp"
	        android:layout_marginRight="14dp"
	        android:background="@drawable/tab_backgroud_selector"
	        android:button="@null"
	        android:gravity="center_horizontal"
	        android:textColor="@drawable/tab_textcolor_selector"
	        android:textSize="24sp"
	        android:text="@string/pub_radio"
            />
        <RadioButton
            android:id="@+id/media_tab_music"
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="14dp"
	        android:layout_marginRight="14dp"
	        android:background="@drawable/tab_backgroud_selector"
	        android:button="@null"
	        android:gravity="center_horizontal"
	        android:textColor="@drawable/tab_textcolor_selector"
	        android:textSize="24sp"
	        android:text="@string/pub_my_music"
            />
    </RadioGroup>
    
    <ImageButton 
        android:id="@+id/search_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@android:color/transparent"
        android:layout_alignParentRight="true"
        android:layout_marginRight="80dp"
        android:paddingTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:visibility="visible"
        android:src="@drawable/media_search_selector"/>
   	
</com.haoke.ui.media.Media_Activity_Tab>
